Changes in 4.2.0-Beta3

1)  Fix ip_forwarding vs the 'restore' command.

2)  Don't assume -f in /etc/init.d/shorewall-lite

3)  Implement USE_DEFAULT_RT

Changes in 4.2.0-Beta2

1)  Only issue a warning on RFC 1918 violation.

2)  Implement 'save' user exit.

3)  HELPER column in tcrules.

4)  De-implement DYNAMIC_ZONES=Yes in Shorewall-perl.

5)  Allow !+setname.

6)  Add macro.Mail.

Changes in 4.2.0-Beta1

1)  Fix handling of firewall marks.

2)  Allow upper-case A-F in hex representation of MARK in tcclasses.

3)  De-implement DYNAMIC_ZONES=Yes in Shorewall-perl and fix it in
    Shorewall-shell.

Changes in 4.1.8

1)  Fix some parsing issues with absurd configurations.

2)  Undo routing changes applied by "NULL_ROUTE_RFC1918=Yes". 

3)  Improvements in parsing.

4)  Add the -p option to start and stop

5)  Allow installers to run under Cygwin without extra parameters.

6)  Add -p option to 'start' and 'restart' commands.

Changes in 4.1.7

1)  Fix port verification.

2)  Fix number of columns calculation.

3)  Allow user exits to detect gateway.

4)  Add CONNBYTES column to tcrules.

5)  Fix a couple of 4.1.6 bugs.

6)  Add MANGLE_ENABLED option.

7)  Fix priority mingling in tc filters.

8)  Fix ":" parsing errors.

9)  Add ORIGINAL DEST column to macros.

10) Add NULL_ROUTE_RFC1918 option.

11) Defer enabling of forwarding until rules are in place.

12) Merge Tuomo's SANE support patch. 

13) Fix silly duplicate-rule error.

14) Fix IPSEC host entry with DYNAMIC_ZONES=Yes

15) Use the OPTIONS variable from /etc/default/shorewall[-lite] on Debian.

Changes in 4.1.6

1)  Deprecate IMPLICIT_CONTINUE=Yes

2)  Add REDIRECTED INTERFACES column to tcdevices.

3)  Add L2TP tunnel support.

4)  Add support for IFB devices -- phase I.

5)  Add support for IFB devices -- phase II.

Changes in 4.1.5

1)  More ruleset optimization.

2)  Make LOG_MARTIANS=Yes the default.

3)  Update modules file for 2.6.25.

4)  Restore 3.4 code to work around busybox limination.
