@@ -356,6 +356,8 @@
 
       <arg><option>-p</option></arg>
 
+      <arg><option>-f</option></arg>
+
       <arg><option>-C</option> <option>{shell|perl}</option></arg>
 
       <arg><replaceable>directory</replaceable></arg>
@@ -1063,6 +1065,10 @@
           <para>The <option>-p</option> option causes the connection tracking
           table to be flushed; the <command>conntrack</command> utility must
           be installed to use this option.</para>
+
+          <para>The <option>-f</option> option suppresses the compilation step
+          and simply reused the compiled script which last started/restarted
+          Shorewall. </para>
 
           <para>The <option>-C</option> option determines the compiler to use
           (Shorewall-shell or Shorewall-perl). If not specified, the
