@@ -130,6 +130,10 @@ Other Changes in Shoreall 4.2.0 Beta 3.
        Shorewall is started, then all policy routing will stop working
        (except for those routing rules in the priority range 1-998).
 
+3)  The 'shorewall restart' command now supports an -f option. When
+    this option is specified, no compilation occurs; rather, the script
+    which last started or restarted Shorewall is used. 
+
 New Features in Shorewall 4.2.
 
 1)  Shorewall 4.2 contains support for multiple Internet providers
