@@ -6,6 +6,8 @@ Changes in 4.2.0-Beta3
 
 3)  Implement USE_DEFAULT_RT
 
+4)  Add -f option to the restart command. 
+
 Changes in 4.2.0-Beta2
 
 1)  Only issue a warning on RFC 1918 violation.
